@@ -11,7 +11,7 @@
    rel=dc.rights>
   <meta content="CSS Masking" name=dc.title>
   <meta content=text name=dc.type>
-  <meta content=2013-04-02 name=dc.date>
+  <meta content=2013-04-03 name=dc.date>
   <meta content="Dirk Schulze" name=dc.creator>
   <meta content="Brian Birtles" name=dc.creator>
   <meta
@@ -48,14 +48,14 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 2 April 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 3 April 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-css-masking-20130402/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130403/-->
 
     <dt>Latest version:
 
@@ -690,21 +690,22 @@
      <td>no
   </table>
 
-  <p>This property sets the mask image(s) or the mask source of an element.
-   Images are drawn with the first specified one on top (closest to the user)
-   and each subsequent image behind the previous one. Where:
+  <p>This property sets the mask image(s) or the <a
+   href="#mask-source"><var>mask source</var></a> of an element. Images are
+   drawn with the first specified one on top (closest to the user) and each
+   subsequent image behind the previous one. Where:
 
   <pre class=prod><var><dfn
    id=ltmask-referencegt>&lt;mask-reference&gt;</dfn></var> = <a
    href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a># | <a
-   href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a></pre>
+   href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a></pre>
 
   <pre class=prod><var><dfn
    id=ltmask-imagegt>&lt;mask-image&gt;</dfn></var> = <a
    href="#ltimagegt"><var>&lt;image&gt;</var></a> | none </pre>
 
   <pre class=prod><var><dfn
-   id=ltmask-elementgt>&lt;mask-element&gt;</dfn></var> = <a
+   id=ltmask-sourcegt>&lt;mask-source&gt;</dfn></var> = <a
    href="#lsquolturlgtrsquo"><var>&lt;url&gt;</var></a> | <var>child</var> | <a
    href="#ltchild-selectorgt"><var>&lt;child-selector&gt;</var></a></pre>
 
@@ -712,9 +713,8 @@
    id=ltchild-selectorgt>&lt;child-selector&gt;</dfn> = select(<a
    href="#lsquoltcompound-selectorgtrsquo"><var>&lt;compound-selector&gt;</var></a>#)</pre>
 
-  <p class=note>A <a
-   href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a> can just be
-   specified as a single value and can not contibute to a list of <a
+  <p class=note>A <var>&lt;mask-element&gt;</var> can just be specified as a
+   single value and can not contribute to a list of <a
    href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a> values.
    Otherwise the specified value of the property is invalid. (See examples
    below.)
@@ -725,8 +725,7 @@
 
    <dd> A URL reference to a <a class=element-name
     href="#MaskElement">‘<code class=property>mask</code>’</a> element
-    (for example ‘<code class=css>url(commonmasks.svg#mask)</code>’) or
-    an <a href="#ltimagegt"><var>&lt;image&gt;</var></a>.
+    (for example ‘<code class=css>url(commonmasks.svg#mask)</code>’).
 
    <dt>‘<code class=css>child</code>’
 
@@ -740,25 +739,24 @@
    <dt>‘<a href="#ltchild-selectorgt"><code
     class=css>&lt;child-selector&gt;</code></a>’
 
-   <dd> A comma-separated list of <a
-    href="http://dev.w3.org/csswg/selectors4/#compound">compound
-    selector</a>s scoped at the element to which the ‘<a
-    href="#mask-image"><code class=property>mask-image</code></a>’ property
-    is applied. The first matching element in <a
+   <dd> A functional notation <a href="#CSS3VAL"
+    rel=biblioentry>[CSS3VAL]<!--{{!CSS3VAL}}--></a> accepting a
+    comma-separated list of compound selectors that represents first matching
+    child <a class=element-name href="#MaskElement">‘<code
+    class=property>mask</code>’</a> element in <a
     href="http://www.w3.org/TR/2012/WD-dom-20120405/#concept-tree-order">tree
     order</a> (as defined in <a href="#DOM"
-    rel=biblioentry>[DOM]<!--{{!DOM}}--></a>) as a result of evaluating the
-    list of selectors is taken as the mask source. If there are no matching
-    elements the mask source is invalid.
+    rel=biblioentry>[DOM]<!--{{!DOM}}--></a>).
+    <dl>
+     <dt><dfn id=lsquoltcompound-selectorgtrsquo>‘<code
+      class=css>&lt;compound-selector&gt;</code>’</dfn>
 
-   <dt><dfn id=lsquoltcompound-selectorgtrsquo>‘<code
-    class=css>&lt;compound-selector&gt;</code>’</dfn>
+     <dd> A <a href="http://dev.w3.org/csswg/selectors4/#compound">compound
+      selector</a> as defined in <a href="#SELECTORS4"
+      rel=biblioentry>[SELECTORS4]<!--{{!SELECTORS4}}--></a>.
 
-   <dd> A <a href="http://dev.w3.org/csswg/selectors4/#compound">compound
-    selector</a> as defined in <a href="#SELECTORS4"
-    rel=biblioentry>[SELECTORS4]<!--{{!SELECTORS4}}--></a>.
-
-   <dd>
+     <dd>
+    </dl>
 
    <dt><dfn id=ltimagegt>&lt;image&gt;</dfn>
 
@@ -775,12 +773,13 @@
   <p class=note>If the URI in the ‘<code class=css>url()</code>’ function
    has a fragment identifier, the <a
    href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a> is
-   treated as <a
-   href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a>, otherwise as
-   <a href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a>.
+   treated as <a href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a>,
+   otherwise as <a href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a>.
 
-  <p>An invalid or non-existent mask source is ignored and no masking is
-   applied.
+  <p>If the URI reference of a mask source is not valid (e.g it points to an
+   object that doesn't exist or the object is not a <a class=element-name
+   href="#MaskElement">‘<code class=property>mask</code>’</a> element),
+   no masking is applied.
 
   <p>A mask image that is empty (zero width or zero height), that fails to
    download, is non-existent, or that cannot be displayed (e.g. because it is
@@ -814,11 +813,10 @@ p { mask-image: url(#mask), url(tl.png) }
 img { mask-image: url(#mask), url(resources.svg#mask2) }
 </pre>
 
-   <p>A <a href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a> value
-    that is either used together with another <a
-    href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a> value or an
-    <a href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a> value makes
-    the whole specified ‘<a href="#mask-image"><code
+   <p>A <var>&lt;mask-element&gt;</var> value that is either used together
+    with another <var>&lt;mask-element&gt;</var> value or an <a
+    href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a> value makes the
+    whole specified ‘<a href="#mask-image"><code
     class=property>mask-image</code></a>’ value list invalid.
   </div>
 
@@ -918,9 +916,8 @@ img { mask-image: url(#mask), url(resources.svg#mask2) }
     <p> If the <a
      href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a> of the
      ‘<a href="#mask-image"><code class=property>mask-image</code></a>’
-     property is of type <a
-     href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a> the alpha
-     values of the mask image should be used as the mask values.
+     property is of type <var>&lt;mask-element&gt;</var> the alpha values of
+     the mask image should be used as the mask values.
   </dl>
 
   <div class=example>
@@ -2752,17 +2749,20 @@ div {
    <dt>‘<a href="#ltchild-selectorgt"><code
     class=css>&lt;child-selector&gt;</code></a>’
 
-   <dd> A comma-separated list of <a
-    href="http://dev.w3.org/csswg/selectors4/#compound">compound
-    selector</a>s scoped at the element to which the ‘<a
-    href="#clip-path"><code class=property>clip-path</code></a>’ property
-    is applied. The first matching element in <a
+   <dd> A functional notation <a href="#CSS3VAL"
+    rel=biblioentry>[CSS3VAL]<!--{{!CSS3VAL}}--></a> accepting a
+    comma-separated list of compound selectors that represents first matching
+    child <a class=element-name href="#ClipPathElement">‘<code
+    class=property>clipPath</code>’</a> element in <a
     href="http://www.w3.org/TR/2012/WD-dom-20120405/#concept-tree-order">tree
     order</a> (as defined in <a href="#DOM"
-    rel=biblioentry>[DOM]<!--{{!DOM}}--></a>) as a result of evaluating the
-    list of selectors is taken as the clip source. If there are no matching
-    elements the clip source is invalid.
+    rel=biblioentry>[DOM]<!--{{!DOM}}--></a>).
   </dl>
+
+  <p>If the URI reference is not valid (e.g it points to an object that
+   doesn't exist or the object is not a <a class=element-name
+   href="#ClipPathElement">‘<code class=property>clipPath</code>’</a>
+   element), no clipping is applied.
 
   <h3 id=the-clip-rule><span class=secno>8.2. </span>The ‘<a
    href="#clip-rule"><code class=property>clip-rule</code></a>’ property</h3>
@@ -4064,9 +4064,6 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <li>mask-clip, <a href="#mask-clip"
     title="section 6.5."><strong>6.5.</strong></a>
 
-   <li>&lt;mask-element&gt;, <a href="#ltmask-elementgt"
-    title="section 6.1."><strong>6.1.</strong></a>
-
    <li>&lt;mask-image&gt;, <a href="#ltmask-imagegt"
     title="section 6.1."><strong>6.1.</strong></a>
 
@@ -4110,6 +4107,9 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <li>mask-size, <a href="#mask-size"
     title="section 4."><strong>4.</strong></a>, <a href="#mask-size0"
     title="section 6.7."><strong>6.7.</strong></a>
+
+   <li>&lt;mask-source&gt;, <a href="#ltmask-sourcegt"
+    title="section 6.1."><strong>6.1.</strong></a>
 
    <li>mask source, <a href="#mask-source"
     title="section 4."><strong>4.</strong></a>
