@@ -1,3 +1,10 @@
+2013-04-03  Dirk Schulze  <dschulze@adobe.com>
+	Incorporated more feedback from fantasai:
+	- fixed definition of child
+	- fixed definition of select()
+	- clarify behavior on invalid URI
+	- editorial changes
+
 2013-04-02  Dirk Schulze  <dschulze@adobe.com>
 	descendant is not correct either, should be child to be precise.
 
